refactor: defined type for metadata API return value
